Fix header padding on mobile

--- a/app/assets/stylesheets/nav/nav.scss
+++ b/app/assets/stylesheets/nav/nav.scss
@@ -80,6 +80,8 @@ header {
   }
 
   @include mobile {
+    padding-bottom: 10px;
+
     h1 { display: none; }
 
     nav {
